@@ -10,3 +10,27 @@
 #include "x68/_round.c"
 #include "x68/fconvert.c"
 #endif
+
+/* missing some basic syscalls */
+int
+link(const char *src, const char *dst)
+{
+    return symlink(src, dst);
+}
+
+#include <time.h>
+#include <sys/time.h>
+
+struct timezone {
+    int tz_minueswest;
+    int tz_dsttime;
+};
+
+int
+gettimeofday(struct timeval *tv, struct timezone *tz)
+{
+    tv->tv_sec = (long)time((time_t*)0);
+    tv->tv_usec = 0;
+
+    return 0;
+}
